# bingus-bot

./: .gitignore  Cargo.toml  Pipfile  README.md  TODO.md  flake.nix  justfile  nixosModule.nix  pyproject.toml
.tangled/workflows/: ci.yml
nix/: app.nix  bingus.nix  devShell.nix  lib.nix  nixosModule.nix
nix/checks/: check.nix
nix/nixosModules/: bingus.nix
src/: brain.rs  cogs.json  lorem.rs  lorem.txt  main.py  main.rs  on_message.rs  status.rs
src/bingus/: __init__.py  cogs.json  main.py
src/bingus/cogs/: markov.py
src/bingus/dev/: cog.template.py  format.py  new_cog.py
src/bingus/lib/: markov.py  permissions.py
src/cmd/: dump_chain.rs  forget.rs  forget_edge.rs  load_chain.rs  markov.rs  mod.rs  weights.rs
src/cogs/: markov.py
src/dev/: cog.template.py  new_cog.py
src/lib/: markov.py  permissions.py
