[package]
name = "bingus-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
brotli = "8.0.2"
colog = "1.4.0"
fastrand = "2.3.0"
log = "0.4.29"
rmp-serde = "1.3.1"
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "signal",
] }
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-interactions = "0.17.0"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder"] }
