[package]
name = "bingus-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
brotli = "8"
colog = "1"
fastrand = "2"
log = "0.4"
reqwest = "0.13"
rmp-serde = "1"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "signal",
] }
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-interactions = "0.17"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }
