[project]
name = "bingus"
version = "0.1.0"
description = "The world's most clever kitty cat"
readme = "README.md"
authors = [{ name = "Ben C", email = "bwc9876@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "brotli>=1.1.0",
    "msgpack>=1.1.1",
    "py-cord>=2.6.1",
    "python-dotenv>=1.1.1",
    "pytesseract>=0.3.13",
    "pillow>=11.3.0",
    "pypdf>=5.7.0",
    "audioop-lts>=0.2.1",
]

[project.scripts]
bingus = "bingus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
